Formulario de contacto sin terminar

--- a/juniortech/src/index.html
+++ b/juniortech/src/index.html
@@ -6,7 +6,8 @@
   <title>Juniortech</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon"
+    href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2024-07-04/0124d14ca16a64d96140fc1deed8cfa4.ico.png">
   <!--Google fonts links-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
